[package]
name = "corrode"
version = "0.1.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.15.0"
egui_winit_vulkano = "0.14.0"
vulkano = "0.27.1"
vulkano-win = "0.27.1"
vulkano-shaders = "0.27.1"
winit = "0.25.0"
anyhow = "1.0.40"
cgmath = { version = "0.18.0", features = ["serde"] }
log = "0.4.14"
simplelog = "0.9.0"
rapier2d = "0.11.1"
rayon = "1.5.1"
num_cpus = "1.13.0"
crossbeam = "0.8.1"
serde = "1.0.130"
serde_json = "1.0.71"
hecs = "0.7.1"


