[package]
name = "corrode"
version = "0.1.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2021"

[dependencies]
egui_winit_vulkano = "0.15.0"
egui = "0.16.0"
vulkano = "0.28"
vulkano-win = "0.28"
vulkano-shaders = "0.28"
winit = "0.26.0"
anyhow = "1.0.40"
cgmath = { version = "0.18.0", features = ["serde"] }
log = "0.4.14"
simplelog = "0.9.0"
rayon = "1.5.1"
num_cpus = "1.13.0"
crossbeam = "0.8.1"
serde = "1.0.130"
serde_json = "1.0.71"
hecs = "0.7.1"

[dependencies.rapier2d]
version = "0.13.0"
default-features = false
features = ["dim2", "f32", "serde-serialize", "simd-nightly"]