[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corrode = { path = "../corrode" }
egui = "0.16.0"
vulkano = "0.28"
vulkano-win = "0.28"
vulkano-shaders = "0.28"
winit = "0.26.0"
anyhow = "1.0.40"
cgmath = "0.18.0"
simplelog = "0.9.0"
log = "0.4.14"
rand = "0.8.4"
line_drawing = "1.0.0"
image = "0.23.14"
hecs = "0.7.1"
serde = "1.0.130"
serde_json = "1.0.71"
bitflags = "1.3.2"
contour = "0.4.0"
strum_macros = "0.21.1"
strum = "0.21.0"
rayon = "1.5.1"
lazy_static = "1.4.0"

[dependencies.rapier2d]
version = "0.13.0"
default-features = false
features = ["dim2", "f32", "serde-serialize", "simd-nightly"]